Gallery update. Added the Alpine Convention Atlas

--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,3 +1,9 @@
+- title: AlpConv Atlas
+  subtitle: Alpine Convention Atlas 
+  description:  The Alpine Convention Atlas, enables the management, visualisation and dissemination of Alpine-wide data collected in the scope of the Alpine Convention's activities. The Atlas focuses primarily on geospatial information (layers and maps) but it also includes documents, datasets and much more.
+  url: https://www.atlas.alpconv.org/
+  image: AlpConvAtlas.jpg
+
 - title: Geoportal OUOT
   subtitle: Observatorio Universitario de Ordenamiento Territorial (OUOT) - Universidad Nacional Autónoma de Honduras (UNAH)
   description: The University Observatory of Territorial Planning, proposed by the Faculty of Space Sciences through the Master's Degree in Territorial Planning and Management, is a specialized center that collects, processes, analyzes, interprets, systematizes and disseminates information on the subject of Territorial Planning and Geographic Information Technologies, aimed at supporting and substantiating the scientific research of the UNAH and contributing to the rigorous knowledge of the subject in the country.This Geoportal, based on GeoNode, aims to be an open repository of information to share geospatial data and maps, which can be consulted by the university community and the general population.
