Update Gallery. added The New Alpine Convention Atlas

--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,6 +1,6 @@
 - title: AlpConv Atlas
   subtitle: Alpine Convention Atlas 
-  description:  The Alpine Convention Atlas, enables the management, visualisation and dissemination of Alpine-wide data collected in the scope of the Alpine Convention's activities. The Atlas focuses primarily on geospatial information (layers and maps) but it also includes documents, datasets and much more.
+  description: The Alpine Convention Atlas is the place where you can discover and browse the relevant data and information concerning the Alps! Its aim is to collect, organize and disseminate the results of research activities carried out by the Alpine Convention and its Working Groups as well as by European projects in the Alpine region.
   url: https://www.atlas.alpconv.org/
   image: AlpConvAtlas.jpg
 
