Fix documentation base link
Change RTD base link to master, current version of 3.1 does not exist (anymore?) and breaks FAQ entries.

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ ga:
   code: "UA-38570723-1"
 
 extbase:
-  docs: "https://docs.geonode.org/en/3.1/"
+  docs: "https://docs.geonode.org/en/master/"
 
 
 dns_prefetch: ['//www.google-analytics.com', '//fonts.googleapis.com']
