--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,3 +1,21 @@
+- title: KMaP
+  subtitle: UNEP-MAP Knowledge Management Platform
+  description: KMAP is conceived as a unique access hub to e UNEP-MAP (Mediterranean Action Plan) knowledge heritage. It is composed by a Data Hub, collecting geographical data in broader sense, The Knowledge Hub, collecting all the UNEP-MAP documental heritage, and an Exchange Hub aimed to enforce the cooperation with UNEP-MAP contributors, stakeholders, citizens, and communities of interests. 
+  url: https://kmap.info-rac.org/
+  image: kmap.jpg
+
+- title: SCORE
+  subtitle: SCORE Project Data exchange and publishing
+  description: This the platform of the SCORE project, a four-year EU-funded project aiming to increase climate resilience in European coastal cities.
+  url: https://platform.score-eu-project.eu/
+  image: score.jpg
+
+- title: Po River Basin Authority
+  subtitle: Geoportal of the italian basin authority of Po River
+  description: SDI of the basin authority of Po River, the main italian river, where all the public ecological, hydrological and hydrogeological information and thematic maps about the Po river area are published.
+  url: https://webgis.adbpo.it/
+  image: adbpo.jpg
+
 - title: Thünen-Atlas
   subtitle: OpenData portal by Thünen-Institute 
   description: Since 2015, the Thünen Institute has made data on land use and animal husbandry in Germany publicly available in digital map sets at the municipal level. In 2016, we added maps on fisheries, forests and forest use. Also, in 2016, the Land Atlas was created as a comprehensive digital map application. The new Thünen Atlas combines all these digital applications and their underlying data inside a data portal providing metadata and web services.
