--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -9,11 +9,17 @@
   description: KMAP is conceived as a unique access hub to e UNEP-MAP (Mediterranean Action Plan) knowledge heritage. It is composed by a Data Hub, collecting geographical data in broader sense, The Knowledge Hub, collecting all the UNEP-MAP documental heritage, and an Exchange Hub aimed to enforce the cooperation with UNEP-MAP contributors, stakeholders, citizens, and communities of interests. 
   url: https://kmap.info-rac.org/
   image: kmap.jpg
-   
+
+- title: CeDoc
+  subtitle: Sardinia CeDoc WebGIS
+  description: The CEDOC WebGIS platform provides access to geospatial data and maps for Sardinia, enabling visualization, analysis, and data sharing to support regional decision-making.
+  url: https://cedoc-webgis.regione.sardegna.it/
+  image: cedoc.jpg
+  
 - title: SCORE
   subtitle: SCORE Project Data exchange and publishing
-  description: This the platform of the SCORE project, a four-year EU-funded project aiming to increase climate resilience in European coastal cities.
-  url: https://platform.score-eu-project.eu/
+  description: The CEDOC WebGIS platform provides access to geospatial data and maps for Sardinia, enabling visualization, analysis, and data sharing to support regional decision-making.
+  url: https://cedoc-webgis.regione.sardegna.it/
   image: score.jpg
   
 - title: FRAME
