--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -9,6 +9,12 @@
   description: Reshaping conservation into the future
   url: https://iks.conservationfutures.org.au/#/
   image: univmelb.jpg
+
+- title: County of Treviso (Italy) Geoportal 
+  subtitle: County of Treviso (Italy) Geoportal 
+  description: County of Treviso (Italy) Geoportal, sharing maps and geospatial data over the county's territory 
+  url: County of Treviso (Italy) Geoportal 
+  image: treviso.jpg
   
 - title: KMaP
   subtitle: UNEP-MAP Knowledge Management Platform
