--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -4,6 +4,12 @@
   url: https://maps.eurac.edu/
   image: eurac.jpg
   
+- title: Fossil Fuel Atlas
+  subtitle: Fossil Fuel Atlas
+  description: The Fossil Fuel Atlas enables users to make data-driven maps, access cutting-edge information, and communicate compelling stories.
+  url: https://www.fossilfuelatlasportal.org/#/
+  image: fossil.jpg
+
 - title: Conservation Futures
   subtitle: University of Melbourne Conservation Futures Portal
   description: Reshaping conservation into the future
