fixed image in gallery

--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -8,7 +8,7 @@
   subtitle: Fossil Fuel Atlas
   description: The Fossil Fuel Atlas enables users to make data-driven maps, access cutting-edge information, and communicate compelling stories.
   url: https://www.fossilfuelatlasportal.org/#/
-  image: fossil.jpg
+  image: foss_fuel_atlas.jpg
 
 - title: Conservation Futures
   subtitle: University of Melbourne Conservation Futures Portal
